test/corpus/elements.txt
================================================================================
Sub elements
================================================================================

Type0 := Base {
    Bar {}
    foo := Bar {}
}

--------------------------------------------------------------------------------

(document
  (component
    id: (identifier)
    root_element: (element
      base_type: (qualified_type_name
        (identifier))
      (element_content
        (sub_element
          (element
            base_type: (qualified_type_name
              (identifier))
            (element_content)))
        (sub_element
          id: (identifier)
          (element
            base_type: (qualified_type_name
              (identifier))
            (element_content)))))))

================================================================================
Property bindings
================================================================================

Type0 := Base {
    foo: {}
    bar: baz;
    two_way <=> bar.baz;
}

--------------------------------------------------------------------------------

(document
  (component
    id: (identifier)
    root_element: (element
      base_type: (qualified_type_name
        (identifier))
      (element_content
        (binding
          name: (identifier)
          expr: (binding_expression
            (code_block)))
        (binding
          name: (identifier)
          expr: (binding_expression
            (qualified_name
              (identifier))))
        (two_way_binding
          name: (identifier)
          expr: (qualified_name
            (identifier)
            (identifier)))))))
